--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,10 +1,12 @@
 <h1>New Message</h1>
 
-<%= form_with(model: [@message.room, @message]) do |form| %>
-  <div class="field">
-    <%= form.text_field :content %>
-    <%= form.submit "送信" %>
-  </div>
+<%= turbo_frame_tag "new_message" do %>
+  <%= form_with(model: [@message.room, @message]) do |form| %>
+    <div class="field">
+      <%= form.text_field :content %>
+      <%= form.submit "送信" %>
+    </div>
+  <% end %>
 <% end %>
 
 <%= link_to '戻る', @message.room %>
